# tm4c1294

./: .gitignore  CMakeLists.txt  postbuild.cmake  sources.cmake  toolchain.cmake  wscript
core/: main.c
debugger/: fscript.jlink
scripts/: build.bat  configure.bat  flash.bat
sdk/ldscript/: linkerfile.ld
sys/: waf
waf/: .lock-waf_win32_build  main.c  wscript
